...
            "state" : "translated",
            "value" : "Aggiungi Filtro"
          }
        }
      }
    },
    "Add Server" : {
      "localizations" : {
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aggiungi Server"
          }
...
            "state" : "translated",
            "value" : "Salva Percorso"
          }
        }
      }
    },
    "Search" : {
      "localizations" : {
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerca"
          }
...
            "state" : "translated",
            "value" : "URL del Server"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Impostazioni"
          }
...
            "state" : "translated",
            "value" : "Tempo Rimanente"
          }
        }
      }
    },
    "Torrent" : {
      "localizations" : {
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Torrent"
          }
...
